# Image-Processing-with-C

./: .gitignore  README.md
src/: CMakeLists.txt  File.c  File.h  Image.c  Image.h  Main.c  Menu.c  Menu.h  Save.c  Save.h  UserHandler.c  UserHandler.h  bitmap.c  email.c  email.h  popupImage.h  url.c
src/Effects/: Blur.c  Blur.h  Border.c  Border.h  CartoonDrawing.c  CartoonDrawing.h  Color.c  Color.h  Noise.c  Noise.h  PencilSketch.c  PencilSketch.h  Pixelate.c  Pixelate.h  Redeye.c  Redeye.h  Solarize.c  Solarize.h  Stylize.c  Stylize.h  cartonize.c  cartonize.h  cropping.c  emboss.c  emboss.h  gaussian blur.cpp  gaussianblur.h  guassianblur.c  halftone.c  halftone.h  invert.c  invert.h  oil paint.cpp  oilpaint.h  oilpainting.c  posterize.c  posterize.h  resize2.c  rotate2.c  saturation.c  (+8 more)
